--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,39 +1,42 @@
 // global styles
-
 html {
-  height: 100%;
-  margin: 0;
-  font-size: 62.5%;
+    height: 100%;
+    margin: 0;
+    font-size: 62.5%;
 }
 
 body {
-  font-size: 1.4rem;
-  padding: 0;
-  margin: 0;
-  font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
+    font-size: 1.4rem;
+    padding: 0;
+    margin: 0;
+    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
+
 // override element style
 // hack
-
 .el-loading-mask {
-  z-index: 1000;
+    z-index: 1000;
 }
 
 .line {
-  height: 1px;
-  background-color: #e0e6ed;
-  margin: 25px -24px;
+    height: 1px;
+    background-color: #e0e6ed;
+    margin: 25px -24px;
 }
 
 .line-top {
-  height: 1px;
-  background-color: #e0e6ed;
-  margin: 25px -24px 0 0;
+    height: 1px;
+    background-color: #e0e6ed;
+    margin: 25px -24px 0 0;
+}
+
+.el-table {
+    margin-top: 20px;
 }
